reverted some stuff, trying to get it fixed on mobile

--- a/css/layouts/global.css
+++ b/css/layouts/global.css
@@ -124,7 +124,7 @@ a {
     font-size: 20px;
     font-weight: bold;
     background: white;
-    padding: 2em .5em;
+    padding: 1em 1.6em;
     font-weight: 100;
     line-height: 1em;
 }
